samples/_failures_safe/1761434722_7faae2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4928895f.c: In function ‘run_state_machine’:
./samples/SAFE/__tmp_4928895f.c:191:5: error: expected expression at end of input
  191 |     while (1)
      |     ^~~~~
./samples/SAFE/__tmp_4928895f.c:191:5: error: expected declaration or statement at end of input
